# rustytasks

./: .gitignore  Cargo.toml  README.md  local_db.json
src/: auth.rs  cli.rs  commands.rs  db.rs  error.rs  main.rs  models.rs  sync.rs
