[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
mongodb = { version = "2.5", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
dotenv = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
dirs = "5.0"
tokio-util = "0.7"
serde_json = "1.0"